--- a/Project_ClassCredit/Project_ClassCredit.csproj
+++ b/Project_ClassCredit/Project_ClassCredit.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modal\Course.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Helper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
